# anifriend

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md
backend/: CLAUDE.md  Dockerfile  alembic.ini  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3bfe13dac4b7_add_cascade_delete_to_survey_relations.py  41d39d81ee50_add_case_insensitive_username_index.py  4c37d0f94e9f_fix_case_insensitive_username_index.py  64c1d24bdeb5_add_anime_corpus_tables.py  8134668ac365_initial_schema.py  8b29b4ff5b3c_add_survey_and_watched_anime_tables.py  a96043adca5c_add_anime_and_anime_genres_tables.py  ca9c894917aa_initial_schema.py  f6191c47e6fb_create_users_table.py
backend/app/: exceptions.py  main.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: animes.py  auth.py  genres.py  recommend.py  survey.py  users.py
backend/app/core/: config.py  db.py  security.py
backend/app/dto/: __init__.py  survey.py  user.py
backend/app/integrations/: __init__.py  mal.py  shikimori.py
backend/app/models/: __init__.py  anime.py  anime_genre.py  anime_studio.py  anime_synonym.py  base.py  genre.py  studio.py  survey.py  survey_anime.py  survey_character.py  survey_genre.py  user.py  watched_anime.py
backend/app/schemas/: __init__.py  anime.py  genre.py  survey.py  user.py
backend/app/services/: __init__.py  anime.py  genre.py  recommend.py  survey.py  user.py
backend/scripts/: export_openapi.py  prestart.sh  seed_animes.py  seed_genres.py
backend/tests/: conftest.py
backend/tests/utils/: db.py  genre.py  user.py
(+46 files in other folders)
