[project]
name = "anifriend"
version = "0.1.0"
description = "AI-driven anime recommender"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.136.1",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "sqlalchemy>=2.0.49",
]

[tool.fastapi]
entrypoint = "app.main:app"
